Preventing overflow of long strings without spaces

--- a/frontend/components/user-post/UserPost.module.scss
+++ b/frontend/components/user-post/UserPost.module.scss
@@ -71,6 +71,7 @@
     color: var(--text-secondary);
     margin-top: var(--spacing-primary);
     display: block;
+    overflow-wrap: anywhere;
 }
 .attachments {
     --row-amount: 1;
